--- a/MoneySac/AndroidManifest.xml
+++ b/MoneySac/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -37,6 +44,11 @@
             android:name="com.mad.moneySac.activities.CategoryDetailActivity"
             android:label="@string/title_activity_category_detail"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
+        </activity>
+        <activity
+            android:name="com.mad.moneySac.activities.ShowPictureActivity"
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
+            android:label="@string/title_activity_show_picture" >
         </activity>
     </application>
 
