--- a/MoneySac/AndroidManifest.xml
+++ b/MoneySac/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:name="com.mad.moneySac.activities.EditEntryActivity"
             android:label="@string/title_activity_edit_entry"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
+            <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.CategoryListView"
@@ -47,9 +48,18 @@
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.ShowPictureActivity"
-            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
-            android:label="@string/title_activity_show_picture" >
+            android:label="@string/title_activity_show_picture"
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
+
+        <receiver android:name="com.mad.moneySac.activities.Widget">"
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widgetprovider" />
+        </receiver>
     </application>
 
 </manifest>
