Dialog aus RecurringEntryActivity gemacht, Titel werden dabei nicht mehr benötigt, JavaDoc angepasst

--- a/MoneySac/AndroidManifest.xml
+++ b/MoneySac/AndroidManifest.xml
@@ -60,7 +60,7 @@
         <activity
             android:name="com.mad.moneySac.activities.RecurringEntryActivity"
             android:label="@string/title_activity_recurring_entry"
-            android:theme="@android:style/Theme.Holo" >
+            android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
         <receiver android:name="com.mad.moneySac.activities.Widget">"
             <intent-filter>
