--- a/MoneySac/AndroidManifest.xml
+++ b/MoneySac/AndroidManifest.xml
@@ -23,37 +23,44 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.mad.moneySac.activities.MoneySac"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.EditEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_edit_entry"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
             <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.CategoryListView"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_category_list_view"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.CategoryDetailActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_category_detail"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.ShowPictureActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_show_picture"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.StatsActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_stats"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.RecurringEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_recurring_entry"
             android:theme="@android:style/Theme.Holo.Dialog.NoActionBar" >
         </activity>
@@ -70,6 +77,7 @@
 
         <activity
             android:name="com.mad.moneySac.activities.AuthenticatorActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.NoActionBar"
             android:windowSoftInputMode="stateVisible" >
@@ -81,6 +89,7 @@
         </activity>
         <activity
             android:name="com.mad.moneySac.activities.SettingsActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_settings"
             android:theme="@android:style/Theme.Holo" >
         </activity>
